--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meldepunkte Tracker</title>
     <link rel="stylesheet" href="styles.css">
-    <script type="module" src="app.js" defer></script>
 </head>
 <body>
     <h1>Meldepunkte Tracker</h1>
@@ -28,5 +27,8 @@
             <!-- Anlagen werden hier dynamisch geladen -->
         </div>
     </section>
+
+    <!-- Script am Ende des Body -->
+    <script type="module" src="app.js"></script>
 </body>
 </html>
