--- a/index.html
+++ b/index.html
@@ -53,6 +53,13 @@
 
     <!-- Datenansicht für eine Anlage -->
     <div id="anlage-details-page" class="page" style="display:none;">
+        <h3>Wählen Sie das Prüfquartal</h3>
+        <select id="quartal-select">
+            <option value="Q1">Q1</option>
+            <option value="Q2">Q2</option>
+            <option value="Q3">Q3</option>
+            <option value="Q4">Q4</option>
+        </select>
         <div id="anlage-details-container"></div>
     </div>
 </body>
