--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="de">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,58 +8,71 @@
     <link rel="stylesheet" href="styles.css">
     <script type="module" src="app.js" defer></script>
 </head>
+
 <body>
-    <!-- Navigation Bar -->
-    <nav id="navbar">
-        <ul>
-            <li><a href="#" id="home-link">Startseite</a></li>
-            <li><a href="#" id="search-link">Anlagen suchen</a></li>
-            <li><a href="#" id="create-link">Anlage erstellen</a></li>
-        </ul>
+    <!-- Navbar -->
+    <div id="navbar">
+        <button id="home-link">Startseite</button>
+        <button id="search-link">Anlagen suchen</button>
+        <button id="create-link">Anlage erstellen</button>
         <div id="auth-section">
-            <button id="login-button">Login</button>
+            <button id="login-button" style="display:none;">Login</button>
             <button id="logout-button" style="display:none;">Logout</button>
         </div>
-    </nav>
-
-    <!-- Startseite -->
-    <div id="home-page" class="page">
-        <h1>Willkommen im Meldepunkte Tracker</h1>
-        <p>Wählen Sie eine Option aus dem Menü.</p>
     </div>
 
-    <!-- Anlagen Suche -->
-    <div id="search-page" class="page" style="display:none;">
-        <h2>Suche nach einer Anlage</h2>
-        <input type="text" id="search-input" placeholder="Anlagen ID oder Name">
+    <!-- Startseite -->
+    <div id="home-page" class="page" style="display: none;">
+        <h2>Willkommen im Meldepunkte Tracker</h2>
+        <p>Bitte melden Sie sich an, um fortzufahren.</p>
+    </div>
+
+    <!-- Anlagen suchen -->
+    <div id="search-page" class="page" style="display: none;">
+        <h2>Anlagen suchen</h2>
+        <input type="text" id="search-input" placeholder="Anlagenname oder ID suchen">
         <button id="search-button">Suchen</button>
         <div id="search-results"></div>
     </div>
 
-    <!-- Erstellung einer neuen Anlage -->
-    <div id="create-page" class="page" style="display:none;">
+    <!-- Anlage erstellen -->
+    <div id="create-page" class="page" style="display: none;">
         <h2>Neue Anlage erstellen</h2>
-        <input type="text" id="anlage-name" placeholder="Anlagen Name">
-        <input type="number" id="anlage-number" placeholder="Anlagen Nummer (ID)">
-        <input type="number" id="meldegruppen-count" placeholder="Anzahl der Meldegruppen" min="1">
+        <input type="text" id="anlagen-name" placeholder="Anlagenname">
+        <input type="text" id="anlagen-nummer" placeholder="Anlagennummer (ID)">
+        <input type="number" id="meldegruppen-count" placeholder="Anzahl der Meldergruppen" min="1" max="200">
         <button id="create-anlage-button">Anlage erstellen</button>
     </div>
 
-    <!-- Datenansicht für eine Anlage -->
-    <div id="anlage-details-page" class="page" style="display:none;">
-        <h3 id="anlage-name-display">Anlage Name</h3>
+    <!-- Anlage Details -->
+    <div id="anlage-details-page" class="page" style="display: none;">
+        <h2>Anlage Details</h2>
+        <h3 id="anlage-name-display">Anlagenname</h3>
         <select id="quartal-select">
             <option value="Q1">Q1</option>
             <option value="Q2">Q2</option>
             <option value="Q3">Q3</option>
             <option value="Q4">Q4</option>
         </select>
-        <label>
-            <input type="checkbox" id="show-open-points"> Nur offene Meldepunkte anzeigen
-        </label>
+        <input type="checkbox" id="show-open-points"> Nur offene Meldepunkte anzeigen
         <div id="anlage-details-container"></div>
-        <!-- Pfeil zum Seitenanfang -->
-        <button id="scroll-top-button" class="scroll-top-button">↑</button>
     </div>
+
+    <!-- Scroll to top button -->
+    <button id="scroll-top-button" style="position: fixed; bottom: 20px; right: 20px;">↑</button>
+
+    <!-- Login Form (hidden initially) -->
+    <div id="login-form" style="display:none;">
+        <h2>Login</h2>
+        <input type="email" id="email-input" placeholder="E-Mail">
+        <input type="password" id="password-input" placeholder="Passwort">
+        <button id="login-button">Login</button>
+    </div>
+
+    <!-- Firebase SDK -->
+    <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-firestore.js"></script>
 </body>
+
 </html>
