--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <button id="search-link">Anlagen suchen</button>
         <button id="create-link">Anlage erstellen</button>
         <div id="auth-section">
+            <!-- Login and Logout Buttons -->
             <button id="login-button" style="display:none;">Login</button>
             <button id="logout-button" style="display:none;">Logout</button>
         </div>
@@ -66,7 +67,7 @@
         <h2>Login</h2>
         <input type="email" id="email-input" placeholder="E-Mail">
         <input type="password" id="password-input" placeholder="Passwort">
-        <button id="login-button">Login</button>
+        <button id="login-button-submit">Login</button>
     </div>
 
     <!-- Firebase SDK -->
