--- a/index.html
+++ b/index.html
@@ -30,5 +30,14 @@
         <input type="number" id="new-meldergruppen-count" placeholder="Anzahl Meldergruppen" min="1" max="20">
         <button id="create-submit">Anlage erstellen</button>
     </section>
+
+    <!-- Login Section (only shown when user is not logged in) -->
+    <section id="login-section" style="display:none;">
+        <h2>Login</h2>
+        <input type="email" id="email" placeholder="E-Mail">
+        <input type="password" id="password" placeholder="Passwort">
+        <button id="login-button">Einloggen</button>
+        <button id="register-button">Registrieren</button>
+    </section>
 </body>
 </html>
