--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <nav>
                 <button id="search-submit">Anlagen Suchen</button>
                 <button id="create-submit">Anlage Erstellen</button>
+		<button id="refresh-button">Aktualisieren</button>
                 <button id="logout-button">Ausloggen</button>
             </nav>
         </header>
