--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meldepunkte Tracker</title>
+    <title>CheckInspect</title>
     <link rel="stylesheet" href="styles.css">
     <script type="module" src="app.js" defer></script>
 </head>
 <body>
     <!-- Auth Section -->
     <section id="auth-section">
-        <h1>Meldepunkte Tracker</h1>
+        <h1>CheckInspect</h1>
         <input type="email" id="email" placeholder="E-Mail">
         <input type="password" id="password" placeholder="Passwort">
         <button id="login-button">Einloggen</button>
@@ -19,7 +19,7 @@
     <!-- Menu Section -->
     <section id="menu-section" style="display: none;">
         <header>
-            <h1>Meldepunkte Tracker</h1>
+            <h1>CheckInspect</h1>
             <nav>
                 <button id="search-submit">Anlagen Suchen</button>
                 <button id="create-submit">Anlage Erstellen</button>
