--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- Menu Section -->
     <section id="menu-section" style="display: none;">
         <header>
-            <h1><a href="#" id="checkinspect-link">CheckInspect</a></h1>
+            <h1><a style="font-family:calibri;color:white;text-decoration:none;" href="#" id="checkinspect-link">CheckInspect</a></h1>
             <nav>
                 <button id="search-submit">Anlagen Suchen</button>
                 <button id="create-submit">Anlage Erstellen</button>
