--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <!-- Auth Section -->
     <section id="auth-section">
-        <h1>CheckInspect</h1>
+        <h1 style="font-family:calibri">CheckInspect</h1>
         <input type="email" id="email" placeholder="E-Mail">
         <input type="password" id="password" placeholder="Passwort">
         <button id="login-button">Einloggen</button>
