--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
             <div id="content"></div>
         </main>
     </section>
+<div id="scrollButton" class="scroll-button">
+    <button onclick="scrollToTop()">Nach oben</button>
+</div>
 </body>
-<footer id="scroll-to-top" style="display: none;">⬆</footer>
 </html>
