--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <!-- Auth Section -->
     <section id="auth-section">
-        <h1 style="font-family:calibri">CheckInspect</h1>
+        <img src="logo.png" alt="CheckInspect Logo" style="width: 200px; height: auto;">
         <input type="email" id="email" placeholder="E-Mail">
         <input type="password" id="password" placeholder="Passwort">
         <button id="login-button">Einloggen</button>
@@ -19,7 +19,7 @@
     <!-- Menu Section -->
     <section id="menu-section" style="display: none;">
         <header>
-            <h1><a style="font-family:calibri;color:white;text-decoration:none;" href="#" id="checkinspect-link">CheckInspect</a></h1>
+            <a href="#" id="checkinspect-link"><img src="logo.png" alt="CheckInspect Logo" style="width: 150px; height: auto;"></a>
             <nav>
                 <button id="search-submit">Anlagen Suchen</button>
                 <button id="create-submit">Anlage Erstellen</button>
