--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- Menu Section -->
     <section id="menu-section" style="display: none;">
         <header>
-            <a href="#" id="checkinspect-link"><img src="logo.png" alt="CheckInspect Logo" style="width: 150px; height: auto;"></a>
+            <a href="#" id="checkinspect-link"><img src="logo_free.png" alt="CheckInspect Logo" style="width: 150px; height: auto;"></a>
             <nav>
                 <button id="search-submit">Anlagen Suchen</button>
                 <button id="create-submit">Anlage Erstellen</button>
