--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <!-- Auth Section -->
     <section id="auth-section">
-        <img src="logo.png" alt="CheckInspect" style="width: 200px; height: auto;">
+        <img src="checkinspect-logo-red.png" alt="CheckInspect" style="width: 200px; height: auto;">
         <input type="email" id="email" placeholder="E-Mail">
         <input type="password" id="password" placeholder="Passwort">
         <button id="login-button">Einloggen</button>
@@ -19,7 +19,7 @@
     <!-- Menu Section -->
     <section id="menu-section" style="display: none;">
         <header>
-            <a href="#" id="checkinspect-link"><img src="logo_free.PNG" alt="CheckInspect" style="width: 150px; height: auto;"></a>
+            <a href="#" id="checkinspect-link"><img src="checkinspect-logo-transparent-white.png" alt="CheckInspect" style="width: 150px; height: auto;"></a>
             <nav>
                 <button id="search-submit">Anlagen Suchen</button>
                 <button id="create-submit">Anlage Erstellen</button>
