--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
     <!-- Menu Section -->
     <section id="menu-section" style="display: none;">
         <header>
-            <a href="#" id="checkinspect-link"><img src="checkinspect-logo-transparent-white.png" alt="CheckInspect" style="width: 200px; height: auto;"></a>
+            <div class="logo-container">
+                <a href="#" id="checkinspect-link"><img src="checkinspect-logo-transparent-white.png" alt="CheckInspect" style="width: 200px; height: auto;"></a>
+            </div>
             <nav>
                 <button id="search-submit">Anlagen Suchen</button>
                 <button id="create-submit">Anlage Erstellen</button>
